openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cristal
spec:
  selector:
    app: cristal
  ports:
    - port: 8080
      targetPort: 8080
