openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cristal
spec:
  to:
    kind: Service
    name: cristal
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
